<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
    <TextView
        android:layout_centerHorizontal="true"
        android:id="@+id/Title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Title"
        android:textSize="25dip"
        />
    <EditText 
        android:id="@+id/IPAddr"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Title"
        android:inputType="text|number"
        android:text="@string/ToastforIP"/>
    <Button 
        android:id="@+id/Connection"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/IPAddr"
        android:text="@string/ConnectionServer"
        android:textSize="15dip"/>
</RelativeLayout>